samples/_failures_safe/1761527280_b877b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6ca1a06.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f6ca1a06.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f6ca1a06.c:163:5: error: expected declaration or statement at end of input
  163 |     for
      |     ^~~
